--- a/src/app/app.css
+++ b/src/app/app.css
@@ -1,6 +1,18 @@
 @import "tailwindcss";
 
+
+:root {
+    -ff:"Poppins", sans-serif;
+}
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
+    font-family: var(-ff);
     background-color: #000;
     color: #fff;
 }
