--- a/src/app/app.css
+++ b/src/app/app.css
@@ -16,3 +16,29 @@ body {
     background-color: #000;
     color: #fff;
 }
+
+body.dark {
+    background: #fff; 
+    color: #000;
+}
+
+
+body.dark .NavBar ul {
+    background: #f0f0f0;
+    color: #222;
+}
+
+body.dark .hamburger span {
+    background: #222;
+}
+
+.dark-toggle {
+    cursor: pointer;
+    font-size: 1.5rem;
+}
+
+body.dark .logo {
+    background-color: #000;
+    padding: 0.5rem;
+}
+
